--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,18 +35,45 @@ h1 {
    margin-bottom: 10em;
 }  
 
-.underline2 {
+.underline-taichi {
     width: 10%;  
-    height: 1px;  
     margin-bottom: 7px;  
     margin: 0;
     margin-top: 9px;  
     border-width: 2px;  
     border-color: #A1220E;  
- }  
+    padding-bottom: 3em;
+}  
+
+.underline-classes {
+    width: 10%;   
+    margin-bottom: 7px;  
+    margin-right: 0;
+    margin-top: 9px;  
+    border-width: 2px;  
+    border-color: #A1220E;  
+    padding-bottom: 3em;
+}  
 
 .taichi {
+    margin-bottom: 10em;
+}
+
+.classes{
+    margin-bottom: 10em;
+}
+
+.classes {
+    text-align: right;
+}
+
+.taichi-image {
     width: 500px;
+    margin: auto;
+}
+
+.classes-image {
+    width: 450px;
 }
 
 p {
@@ -58,3 +85,20 @@ p {
 h3 {
     font-family: Sonder;
 }
+
+.book-now {
+    text-align: center;
+}
+
+.underline-book {
+    width: 10%;  
+    height: 1px;  
+    margin-bottom: 7px;  
+    margin-right: auto;  
+    margin-left: auto;  
+    margin-top: 9px;  
+    border-width: 2px;  
+    border-color: #A1220E; 
+    margin-bottom: 5em;
+}
+
