--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,6 +72,11 @@ h1 {
     margin: auto;
 }
 
+.taijiwuxgong-image {
+    width: 500px;
+    margin: auto;
+}
+
 .classes-image {
     width: 450px;
 }
